--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
   box-shadow: 0.5rem 1rem 1rem 0.5rem rgb(0 0 0 / 10%)
   }
   .sr-only{
-    display: none;
+    position: absolute;
     visibility: hidden;
   }
   .container a{
