--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@
     text-decoration: none;
     color: var(--White);
   }
-  h4{
+  h1{
     margin-bottom: 1rem;
+    font-size: 1.2rem;
   }
   body{
     font-family: 'Outfit';
